# resume_cv_ai_scorer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  criteria.txt  cv_assessor.py  pyproject.toml  requirements.txt  response_email_template.txt
cv_assessor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_email.py  test_parsing.py
